apps/rss/freshrss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss-deployment
  namespace: rss
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
        - name: freshrss
          image: freshrss
          ports:
            - containerPort: 80
          volumeMounts:
            - name: freshrss-config
              mountPath: /var/www/FreshRSS/config.custom.php
            - name: freshrss-data
              mountPath: /var/www/FreshRSS/data
      volumes:
        - name: freshrss-config
          persistentVolumeClaim:
            claimName: freshrss-config-pvc
        - name: freshrss-data
          persistentVolumeClaim:
            claimName: freshrss-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: rss
spec:
  selector:
    app: freshrss
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
