apps/rss/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: freshrss
  namespace: freshrss
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "rss.int.kyledev.co"
    - "freshrss.int.kyledev.co"
  rules:
    - backendRefs:
        - name: freshrss
          port: 80
