apps/rss/manifest.yaml
---
# Source: homelab/charts/rss/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rss
  labels:
    helm.sh/chart: rss-0.1.30
    app.kubernetes.io/name: rss
    app.kubernetes.io/instance: rss
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: rss
    app.kubernetes.io/instance: rss
---
# Source: homelab/charts/rss/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss
  labels:
    helm.sh/chart: rss-0.1.30
    app.kubernetes.io/name: rss
    app.kubernetes.io/instance: rss
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: rss
      app.kubernetes.io/instance: rss
  template:
    metadata:
      labels:
        helm.sh/chart: rss-0.1.30
        app.kubernetes.io/name: rss
        app.kubernetes.io/instance: rss
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: rss
      securityContext:
        {}
      containers:
        - name: rss
          image: "freshrss/freshrss:1.29.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /var/www/FreshRSS/data
              name: pvc-rss-pvc
              readOnly: false
      volumes:
        - name: pvc-rss-pvc
          persistentVolumeClaim:
            claimName: rss-pvc
---
# Source: homelab/charts/rss/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rss
  labels:
    helm.sh/chart: rss-0.1.30
    app.kubernetes.io/name: rss
    app.kubernetes.io/instance: rss
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "rss.int.kyledev.co"
    - "rss.ts.kyledev.co"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - group: ""
        kind: Service
        name: rss
        port: 80
        weight: 1
